feat: manage top up rule in canister dashboard frontend

--- a/my-canister-dapp-js/canister-dashboard-frontend/src/styles.css
+++ b/my-canister-dapp-js/canister-dashboard-frontend/src/styles.css
@@ -141,6 +141,7 @@ h3 {
 
 #auth-section,
 #balance-section,
+#top-up-rule-section,
 #status-section,
 #controllers-section,
 #alternative-origins-section {
