--- a/my-canister-dapp-rs/my-canister-dashboard/assets/style.css
+++ b/my-canister-dapp-rs/my-canister-dashboard/assets/style.css
@@ -141,6 +141,7 @@ h3 {
 
 #auth-section,
 #balance-section,
+#top-up-rule-section,
 #status-section,
 #controllers-section,
 #alternative-origins-section {
